--- a/00_Doc/final_project.Rmd
+++ b/00_Doc/final_project.Rmd
@@ -4,42 +4,37 @@ output: html_document
 ---
 
 
-###Project 6 - Blending data sets
+###FINAL PROJECT
 
 Link to repo:
-<https://github.com/sarstanc/DV_TableauProject3>
+<https://github.com/sarstanc/DV_FinalProject>
 
-Link to datasets online:
+###Link to datasets online
+
+Utility rates by zipcode:
 <https://catalog.data.gov/dataset/u-s-electric-utility-companies-and-rates-look-up-by-zipcode-feb-2011-57a7c>
+
+Unemployment rates by zipcode:
+<http://blog.splitwise.com/2014/01/06/free-us-population-density-and-unemployment-rate-by-zip-code/>
+
+Population by zipcode:
+<http://blog.splitwise.com/2013/09/18/the-2010-us-census-population-by-zip-code-totally-free/>
 
 ###Load csv files into Oracle
 
+Truncate tables (files are too large)
 
-APD_INCIDENTS is the primary dataset
+###Data blending in Tableau
+
+
+
+
+primary dataset
 ![alt text](../01_Images/dataset_primary.png)
 
-WEATHER as the secondary dataset
+secondary datasets
 ![alt text](../01_Images/dataset_secondary.png)
 
 ###Ensure the relationships between datasets is based on the common column - date. (Called Date_I and CST)
 ![alt text](../01_Images/data_relationships.png)
 
-
-###Crime type compared to the amount of cloud cover on each day
-More cloud cover is designated by more and larger circles next to each crime.
-![alt text](../01_Images/crime_vs_cover.png)
-
-###Crime types on given days with bad weather
-Null values are filtered out so that only crimes committed on days with bad weather are shown.
-![alt text](../01_Images/crimes_badweather.png)
-
-###Map of Austin showing crime locations and temperature at each
-Each location averages to the same temperature since weather data from Austin is taken from a common location.
-![alt text](../01_Images/map_crimeandtemp.png)
-
-###Temperature on a given day, organized by crime committed
-Points further to the right become more red as the graph moves from January to March.
-![alt text](../01_Images/temp_by_crimetype.png)
-
-
-Filtered out nulls
