require libraries in rmd

--- a/00_Doc/final_project.Rmd
+++ b/00_Doc/final_project.Rmd
@@ -72,6 +72,13 @@ Filter out null and 0 value utility costs
 
 
 ###Creating visualizations in R
+```{r}
+library("rjson")
+library("RCurl")
+require(tidyr)
+require(dplyr) 
+```
+
 ```{r, warning=FALSE}
 source("../04_R/unemployment_rank.R")
 ```
